# jmstorage

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
docker/: Dockerfile  docker-compose.yml
examples/: file_cache.py
src/jmstorage/: __init__.py  client.py  constants.py
src/jmstorage/storage/: __init__.py  base.py  disk_storage_manager.py  redis_storage_manager.py
tests/: test_disk_based_storage.py
