[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmstorage"
dynamic = ["version"]
description = "Key value caching machanism with backends: disk, slite, redis, MySQL, PostgrSQl."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = { file = "LICENSE" }
authors = [{ name = "JustinMusti" }]


classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[project.urls]
"Homepage" = "https://github.com/justinmusti/jmstorage"
"Bug Tracker" = "https://github.com/justinmusti/jmstorage/issues"

[project.optional-dependencies]
dev = [
    "build~=1.0",
    "flake8~=6.1",
    "isort==5.12.0",
    "ipython~=8.12",
    "pytest==7.4.3",
    "twine==4.0.2",
]